added media for bg image

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
       </section>
 
+      <!-- BENEFITS -->
       <section class="section-container">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
@@ -129,6 +130,7 @@
           <ul class="team-list">
             <li class="team-list-item">
               <img
+                srcset="./images/our_team/mark_guerro@2x.jpg 2x"
                 src="./images/our_team/mark_guerro.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -192,6 +194,7 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="./images/our_team/tom_ford@2x.jpg 2x"
                 src="./images/our_team/tom_ford.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -255,6 +258,7 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="./images/our_team/camila_garcia@2x.jpg 2x"
                 src="./images/our_team/camila_garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -318,6 +322,7 @@
             </li>
             <li class="team-list-item">
               <img
+                srcset="./images/our_team/daniel_wilson@2x.jpg 2x"
                 src="./images/our_team/daniel_wilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
