updated portfolio images responsivness

--- a/index.html
+++ b/index.html
@@ -397,9 +397,12 @@
               <div class="img-wrapper">
                 <img
                   srcset="
-                    ./images/our_portfolio/banking_app.jpg        360w,
-                    ./images/our_portfolio/banking_app_tablet.jpg 356w,
-                    ./images/our_portfolio/banking_app_mobile.jpg 288w
+                    ./images/our_portfolio/banking_app.jpg           360w,
+                    ./images/our_portfolio/banking_app@2x.jpg        720w,
+                    ./images/our_portfolio/banking_app_tablet.jpg    356w,
+                    ./images/our_portfolio/banking_app_tablet@2x.jpg 712w,
+                    ./images/our_portfolio/banking_app_mobile.jpg    288w,
+                    ./images/our_portfolio/banking_app_mobile@2X.jpg 576w
                   "
                   sizes="(min-width: 1158px) 360px, 
                         (min-width: 768px) 356px, 
@@ -424,6 +427,17 @@
             <li class="portfolio-list-item">
               <div class="img-wrapper">
                 <img
+                  srcset="
+                    ./images/our_portfolio/cashless_payment.jpg           360w,
+                    ./images/our_portfolio/cashless_payment@2x.jpg        720w,
+                    ./images/our_portfolio/cashless_payment_tablet.jpg    356w,
+                    ./images/our_portfolio/cashless_payment_tablet@2x.jpg 712w,
+                    ./images/our_portfolio/cashless_payment_mobile.jpg    288w,
+                    ./images/our_portfolio/cashless_payment_mobile@2X.jpg 576w
+                  "
+                  sizes="(min-width: 1158px) 360px, 
+                        (min-width: 768px) 356px, 
+                        (max-width: 767px) 288px"
                   src="./images/our_portfolio/cashless_payment.jpg"
                   alt="Cashless Payment"
                   width="360"
@@ -444,6 +458,17 @@
             <li class="portfolio-list-item">
               <div class="img-wrapper">
                 <img
+                  srcset="
+                    ./images/our_portfolio/meditation_app.jpg           360w,
+                    ./images/our_portfolio/meditation_app@2x.jpg        720w,
+                    ./images/our_portfolio/meditation_app_tablet.jpg    356w,
+                    ./images/our_portfolio/meditation_app_tablet@2x.jpg 712w,
+                    ./images/our_portfolio/meditation_app_mobile.jpg    288w,
+                    ./images/our_portfolio/meditation_app_mobile@2X.jpg 576w
+                  "
+                  sizes="(min-width: 1158px) 360px, 
+                        (min-width: 768px) 356px, 
+                        (max-width: 767px) 288px"
                   src="./images/our_portfolio/meditation_app.jpg"
                   alt="Meditation App"
                   width="360"
@@ -463,6 +488,17 @@
             <li class="portfolio-list-item">
               <div class="img-wrapper">
                 <img
+                  srcset="
+                    ./images/our_portfolio/taxi_service.jpg           360w,
+                    ./images/our_portfolio/taxi_service@2x.jpg        720w,
+                    ./images/our_portfolio/taxi_service_tablet.jpg    356w,
+                    ./images/our_portfolio/taxi_service_tablet@2x.jpg 712w,
+                    ./images/our_portfolio/taxi_service_mobile.jpg    288w,
+                    ./images/our_portfolio/taxi_service_mobile@2X.jpg 576w
+                  "
+                  sizes="(min-width: 1158px) 360px, 
+                        (min-width: 768px) 356px, 
+                        (max-width: 767px) 288px"
                   src="./images/our_portfolio/taxi_service.jpg"
                   alt="Taxi Service"
                   width="360"
@@ -483,6 +519,17 @@
             <li class="portfolio-list-item">
               <div class="img-wrapper">
                 <img
+                  srcset="
+                    ./images/our_portfolio/screen_illustrations.jpg           360w,
+                    ./images/our_portfolio/screen_illustrations@2x.jpg        720w,
+                    ./images/our_portfolio/screen_illustrations_tablet.jpg    356w,
+                    ./images/our_portfolio/screen_illustrations_tablet@2x.jpg 712w,
+                    ./images/our_portfolio/screen_illustrations_mobile.jpg    288w,
+                    ./images/our_portfolio/screen_illustrations_mobile@2X.jpg 576w
+                  "
+                  sizes="(min-width: 1158px) 360px, 
+                        (min-width: 768px) 356px, 
+                        (max-width: 767px) 288px"
                   src="./images/our_portfolio/screen_illustrations.jpg"
                   alt="Screen Illustrations"
                   width="360"
@@ -503,6 +550,17 @@
             <li class="portfolio-list-item">
               <div class="img-wrapper">
                 <img
+                  srcset="
+                    ./images/our_portfolio/online_courses.jpg           360w,
+                    ./images/our_portfolio/online_courses@2x.jpg        720w,
+                    ./images/our_portfolio/online_courses_tablet.jpg    356w,
+                    ./images/our_portfolio/online_courses_tablet@2x.jpg 712w,
+                    ./images/our_portfolio/online_courses_mobile.jpg    288w,
+                    ./images/our_portfolio/online_courses_mobile@2X.jpg 576w
+                  "
+                  sizes="(min-width: 1158px) 360px, 
+                        (min-width: 768px) 356px, 
+                        (max-width: 767px) 288px"
                   src="./images/our_portfolio/online_courses.jpg"
                   alt="Online Courses"
                   width="360"
