finished hero section

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
     <main>
       <!-- HERO SECTION -->
-      <!-- <section class="hero-section">
+      <section class="hero-section">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- BENEFITS -->
       <!-- <section class="section-container">
