benefits section finished

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </section>
 
       <!-- BENEFITS -->
-      <!-- <section class="section-container">
+      <section class="section-container">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
@@ -131,7 +131,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- TEAM STUFF -->
       <!-- <section class="section-container team">
