team section finished

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </section>
 
       <!-- TEAM STUFF -->
-      <!-- <section class="section-container team">
+      <section class="section-container team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -396,7 +396,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- OUR PORTFOLIO -->
       <!-- <section class="section-container">
@@ -812,7 +812,7 @@
     </div> -->
 
     <!-- MOBILE MENU -->
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu">
       <button class="mobile-menu-close-btn" type="button">
         <svg
           class="mobile-close-button-icon"
