portfolio section finished

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       </section>
 
       <!-- OUR PORTFOLIO -->
-      <!-- <section class="section-container">
+      <section class="section-container">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -590,7 +590,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- FOOTER SECTION -->
