--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     </main>
 
     <!-- FOOTER SECTION -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-left">
           <a class="logo bottom-logo" href="./index.html"
@@ -681,7 +681,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!--                       BACKDROP                            -->
 
