--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
 
     <!--                       BACKDROP                            -->
 
-    <!-- <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg
@@ -809,7 +809,7 @@
           <button class="modal-form-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- MOBILE MENU -->
     <div class="mobile-menu">
