--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
     </div>
 
     <!-- MOBILE MENU -->
-    <div class="mobile-menu">
+    <div class="mobile-menu is open">
       <button class="mobile-menu-close-btn" type="button">
         <svg
           class="mobile-close-button-icon"
