--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
 
     <!--                       BACKDROP                            -->
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg
@@ -812,7 +812,7 @@
     </div>
 
     <!-- MOBILE MENU -->
-    <div class="mobile-menu is open">
+    <div class="mobile-menu">
       <button class="mobile-menu-close-btn" type="button">
         <svg
           class="mobile-close-button-icon"
@@ -839,6 +839,8 @@
               <a class="mobile-menu-navigation-item" href="">Contacts</a>
             </li>
           </ul>
+        </nav>
+        <div class="mobile-menu-bottom">
           <address class="mobile-address">
             <ul class="mobile-address-list mobile-address-container">
               <li>
@@ -846,64 +848,64 @@
                   >+11 (000) 111-11-11</a
                 >
               </li>
-              <li id="contacts">
+              <li>
                 <a class="mobile-menu-contacts" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
             </ul>
           </address>
-        </nav>
-        <ul class="mobile-menu-social-list">
-          <li class="mobile-social-list-item">
-            <a href="#" class="mobile-social-list-link">
-              <svg
-                class="mobile-social-list-icon"
-                width="24"
-                height="24"
-                aria-label="instagram icon"
-              >
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="mobile-social-list-item">
-            <a href="#" class="mobile-social-list-link">
-              <svg
-                class="mobile-social-list-icon"
-                width="24"
-                height="24"
-                aria-label="twitter icon"
-              >
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="mobile-social-list-item">
-            <a href="#" class="mobile-social-list-link">
-              <svg
-                class="mobile-social-list-icon"
-                width="24"
-                height="24"
-                aria-label="facebook icon"
-              >
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="mobile-social-list-item">
-            <a href="#" class="mobile-social-list-link">
-              <svg
-                class="mobile-social-list-icon"
-                width="24"
-                height="24"
-                aria-label="linkedin icon"
-              >
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+          <ul class="mobile-menu-social-list">
+            <li class="mobile-social-list-item">
+              <a href="#" class="mobile-social-list-link">
+                <svg
+                  class="mobile-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="instagram icon"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-list-item">
+              <a href="#" class="mobile-social-list-link">
+                <svg
+                  class="mobile-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="twitter icon"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-list-item">
+              <a href="#" class="mobile-social-list-link">
+                <svg
+                  class="mobile-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="facebook icon"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-list-item">
+              <a href="#" class="mobile-social-list-link">
+                <svg
+                  class="mobile-social-list-icon"
+                  width="24"
+                  height="24"
+                  aria-label="linkedin icon"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
