--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
           <address class="mobile-address">
             <ul class="mobile-address-list mobile-address-container">
               <li>
-                <a class="mobile-menu-contacts" href="tel:+110001111111"
+                <a class="mobile-menu-contacts tel" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
